<resources>
    <string name="app_name">Propel!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>

    <!-- Strings on second page -->
    <string name="yo">yo</string>

    <!-- Strings for schedule pages -->
    <string name="app_name">My Application</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="add">Add Exercises</string>
    <string name="clear">Clear Exercises</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="day5">Day 5</string>
    <string name="day6">Day 6</string>
    <string name="day7">Day 7</string>

</resources>
